force-app/main/default/objects/ACL_ADEO_API_Callout_Expecifications__mdt/ACL_ADEO_API_Callout_Expecifications__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata will define the information/fields about the records (Service Appointments), that will be sent to ADEO</description>
    <label>ACL Appointment API to ADEO</label>
    <pluralLabel>ACL Appointment API to ADEO</pluralLabel>
</CustomObject>