force-app/main/default/objects/ACL_ADEO_API_Callout_Expecifications__mdt/fields/field_names__c.field-meta.xml
<CustomField>
    <fullName>field_names__c</fullName>
    <label>field_names</label>
    <type>TextArea</type>
</CustomField>