force-app/main/default/objects/ACL_ADEO_API_Callout_Expecifications__mdt/fields/object_type__c.field-meta.xml
<CustomField>
    <fullName>object_type__c</fullName>
    <label>object_type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>