force-app/main/default/objects/ACL_ADEO_API_Callout_Expecifications__mdt/fields/where_query__c.field-meta.xml
<CustomField>
    <fullName>where_query__c</fullName>
    <label>where_query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>